# em-no-agent

./: .gitignore  Cargo.toml  README.md
crates/em-no-agent/: Cargo.toml
crates/em-no-bench/: Cargo.toml
crates/em-no-cli/: Cargo.toml
crates/em-no-cli/src/: main.rs
crates/em-no-core/: Cargo.toml
crates/em-no-core/src/: fno.rs  lib.rs
crates/em-no-eval/: Cargo.toml
crates/em-no-io/: Cargo.toml
crates/em-no-physics/: Cargo.toml
crates/em-no-physics/src/: heat1d.rs  lib.rs  maxwell1d.rs
crates/em-no-train/: .gitignore  Cargo.toml
crates/em-no-train/src/: lib.rs  train_1d.rs  train_heat1d.rs  vis_maxwell.rs  vis_types.rs
crates/em-no-visual/: Cargo.toml
crates/em-no-visual/src/: lib.rs  line.wgsl
