# Cargo.toml (root)
[workspace]
members = [
  "crates/em-no-core",
  "crates/em-no-physics",
  "crates/em-no-train",
  "crates/em-no-eval",
  "crates/em-no-agent",
  "crates/em-no-io",
  "crates/em-no-cli",
  "crates/em-no-visual",
  "crates/em-no-bench",
]
resolver = "2"

[workspace.dependencies]
candle-core      = "0.9.2"
candle-nn        = "0.9.2"
rand             = "0.8"
rand_distr       = "0.4"
pollster      = "0.3"                      
